--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -2,6 +2,10 @@
   <li><a class="active"><%= link_to 'Home', root_path %></a></li>
   <li><a><%= link_to 'New Bike', new_two_wheeler_path %></a></li>
   <li><a><%= link_to('Logout', destroy_user_session_path, method: :delete) %></a></li>
+  <span class='float-right mr-30 mt-30 my-cart'>
+  	<img src='/assets/shopping-cart.png'  width="30" height="30">
+  	<span class="w3-badge cart-item-count" style="margin-left: -21px"><%= current_user.try(:cart).try(:cart_items).try(:count) %></span>
+  <span>
   </ul>
 
 
