--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,14 +1,34 @@
 <%= render 'shared/nav' %>
 
-<% @two_wheeler.each do |bike| %>
+<% @two_wheelers.each do |bike| %>
 <div class="gallery">
   <a target="_blank" href="img_5terre.jpg">
-    <%= link_to image_tag bike.photos.first.try(:image).try(:url), class: 'card-img-top', target: '_blank' %>
+  	<%= bike_dashboard_img(bike) %>
+    <%#= link_to (image_tag(bike.photos.first.try(:image).try(:url))), alt: 'default_bike.png', class: 'card-img-top', target: '_blank' %>
   </a>
   <div class="desc"><%= bike.title %></div>
   <div class="desc"><%= bike.description %></div>
   <div class="desc"><%= bike.price %></div>
-  <%= link_to 'Remove', bike_path(bike), class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure?'} %>
+  <%= link_to 'Remove', two_wheeler_path(bike), class: 'btn btn-danger', method: :delete, data: {confirm: 'Are you sure?'} %>
+  <%= link_to 'Book','javascript:;', id: "bike_#{bike.id}", class: 'bike_listings' %>
 </div>
 <% end %>
+
+
+
+<script>
+	$(document).ready(function(){
+		$(".bike_listings").on('click', function(){
+			var bike_id = $(this).attr('id')
+			var bike_id = bike_id.split('_')[1]
+			$.ajax({
+				url: "<%= carts_path %>",
+				method: 'POST',
+				data: {
+					bike_id: bike_id
+				}
+			})
+		})
+	});
+</script>
 
